force-app/main/default/objects/Challan__c/Challan__c.object-meta.xml
<CustomObject>
    <label>Challan</label>
    <nameField>
        <displayFormat>CH-{00000}</displayFormat>
        <label>Challan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>