force-app/main/default/objects/Challan__c/fields/Branch_Unit__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Unit</label>
    <referenceTo>BranchUnit</referenceTo>
    <relationshipLabel>Challans</relationshipLabel>
    <relationshipName>Challans</relationshipName>
    <type>Lookup</type>
</CustomField>