force-app/main/default/objects/Challan__c/fields/Challan_Date__c.field-meta.xml
<CustomField>
    <fullName>Challan_Date__c</fullName>
    <label>Challan Date</label>
    <type>DateTime</type>
</CustomField>