force-app/main/default/objects/Challan__c/fields/FOS_User__c.field-meta.xml
<CustomField>
    <fullName>FOS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOS User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Challans</relationshipLabel>
    <relationshipName>Challans</relationshipName>
    <type>Lookup</type>
</CustomField>